# egocentric-3d-visual-dataset-generation

./: .gitignore  README.md  pyproject.toml
configs/: phase1_ai2thor_smoke.yaml  phase1_desk_mock.yaml  phase1_procthor_smoke.yaml
configs/scenarios/: ai2thor_floorplan_smoke.yaml  desk_active_scan.yaml  desk_active_scan_mock.yaml  procthor_house_smoke.yaml
docs/: design.md  experiment_design.md  implementation_plan.md  visualization_results.md
docs/implementation/: roadmap.md
docs/runbook/: preview_generation.md  remote_5090.md  smoke_tests.md
docs/spec/: README.codex.md  README.md  dataset_schema.md  dataset_units_and_hierarchy.md  generation_pipeline.md  implementation_roadmap.md  metrics_acceptance.md  objective.md  pilot_calibration.md  quantitative_requirements.md  splits_and_generalization.md  static_scene_design.md  trajectory_sequence_design.md  viewer.html  visual_content_requirements.md
scripts/: build_codex_links.py  remote_generate.sh  remote_setup_5090.sh
src/egodataset/: __init__.py  cli.py  config.py  generator.py  metrics.py  policies.py  preview.py  schema.py  validators.py  writer.py
src/egodataset/backends/: __init__.py  ai2thor_backend.py  mock.py
